--- a/app/views/spree/admin/digitals/_form.html.erb
+++ b/app/views/spree/admin/digitals/_form.html.erb
@@ -2,7 +2,11 @@
   <div>
     <%= form_for(:digital, :url => admin_product_digitals_path(@product), :method => :create, :multipart => true ) do |f| %>
     <fieldset>
-      <legend><%= Spree::Variant.model_name.human %> "<%= variant.options_text %>"</legend>
+      <% if variant.is_master? %>
+        <legend><%= t(:all_variants) %></legend>
+      <% else %>
+        <legend><%= Spree::Variant.model_name.human %> "<%= variant.options_text %>"</legend>
+      <% end %>
       
       <%= f.field_container :current_file do %>
         <strong><%=t 'files' %>:</strong>
